fix generation of configure script

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,12 +72,12 @@ bme280Server_SOURCES =  \
 	
 bme280Server_CXXFLAGS = @CXXFLAGS@ -pthread
 
-install:
+install-data-am:
 	mkdir -p /usr/share/bme280Server
 	cp bme280Server /usr/share/bme280Server/
 	chmod u+x /usr/share/bme280Server/bme280Server
-	cp bme280Server.service /usr/share/bme280Server/
-	$(shell test -e | rm /etc/systemd/system/bme280Server.service)	
+	cp bme280Server.service.in /usr/share/bme280Server/bme280Server.service
+	$$(shell test -e | rm /etc/systemd/system/bme280Server.service)	
 	ln -s /usr/share/bme280Server/bme280Server.service /etc/systemd/system/bme280Server.service
 	sudo systemctl daemon-reload
 	sudo systemctl enable bme280Server.service
