--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -40,8 +40,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Configure
-      run: ./gen_configure.sh
-      
+      run: ./gen_configure.sh && ./configure
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
